// Root project holds no code. The two modules are:
//   transform-jar     - the injected-client transformation tool and its CLI
//   packet-analysis   - packet payload extraction and cross-revision mapping
plugins {
    id 'base'
}

group = 'dev.rl.suite'
version = '1.3.1'
description = 'RuneLite deobfuscator and packet mapper'

subprojects {
    apply plugin: 'java-library'

    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-parameters'
    }
}
